--- a/galerie/galerie.css
+++ b/galerie/galerie.css
@@ -6,6 +6,8 @@ body{
 .bkg img{
     width: 100%;
     height: 450px;
+    margin-left: 0;
+    margin-top: 10px;
 }
 .bkg p {
     position: absolute;
@@ -45,9 +47,12 @@ body{
     height: 30px;
     padding-top: 10px;
     padding-left: 50px;
+    padding-bottom: 15px;
     font-weight: bold;
     background-color: rgb(65, 65, 65);
     color: white;
+    text-align: center;
+    font-size: 30px;
 }
 span i {
     margin-left: 30px;
