Modification de quelques liens de navigation

--- a/contact/form.css
+++ b/contact/form.css
@@ -2,6 +2,10 @@ body{
     background-color: rgb(255, 255, 255);
 }
 
+.contact{
+    text-decoration: underline var(--couleurheader);
+}
+
 .form-container {
     width: 450px;
     border-radius: 0.75rem;
