--- a/metiers/style.css
+++ b/metiers/style.css
@@ -1,10 +1,14 @@
-.header{
+.met{
+    text-decoration: underline #F46A58;
 }
+
+
 h4 {
     text-align: center;
     /* background-color: #F46A58; */
     color: black;
-    margin-top: 0px;
+    margin-top: 40px;
+    font-size: 26PX;
 }
 .titretexte{
     font-weight: bold;
