--- a/galerie/galerie.css
+++ b/galerie/galerie.css
@@ -3,6 +3,10 @@ body{
     padding: 0px;
     margin: 0px;
 }
+.galerie{
+    text-decoration: underline var(--couleurheader);
+}
+
 .bkg img{
     width: 100%;
     height: 450px;
